# iPerturb

./: .gitattributes  .gitignore  LICENSE  README.md  gene_list.txt  iperturb.py  pyproject.toml  requirements.txt
figs/: K562_ablation_lambda.tsv  ablation_lambda.py  extract_fig2_cloud.py  extract_fig2_data.py  extract_fig3_data.py  fig2_points.csv  fig3_values.csv  jacobian_rowsum.py  make_fig1_overview.py  make_fig2_scatter.py  make_fig3.py  style_google.py
iperturb/: __init__.py  config.py  data.py  model.py  train.py  utils.py  visualize.py
iperturb/grn/: __init__.py  merge.py  select.py  sources.py
iperturb_v2/: README.md  __init__.py  _iperturb_prop.py  adapter.py  config.py  splits.py
iperturb_v2/tests/: test_engine.py
notebooks/: iPerturb_Colab.ipynb
scripts/: build_grn.py  run_pipeline.py  train_grnn.py
